Style(main, header, global): Bugs no estilo solucionados: Seção inferior sem margin-bottom e menu lateral com z-index não definido.

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -22,7 +22,7 @@
 }
 
 body {
-  height: 100vh;
+  min-height: 100vh;
   width: 100vw;
 
   background-image: url("../assets/background-stars.svg");
