--- a/src/css/header.css
+++ b/src/css/header.css
@@ -78,6 +78,7 @@
     top: 4.3rem;
     left: 0;
     background-color: var(--c2);
+    z-index: 10;
 
     margin: 0;
   }
